--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="signIn" data-theme="dark"></div>
-    <a href="#" onclick="signOut();">Sign out</a>
+    <a href="#" id="goOut">Sign out</a>
   </body>
 </html>
