bind closure to window

--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -7,7 +7,7 @@
     <script src="googleSignTest.js"></script>
   </head>
   <body>
-    <div class="g-signin2" data-onsuccess="signIn" data-theme="dark"></div>
-    <a href="#" id="goOut">Sign out</a>
+    <div class="g-signin2" data-onsuccess="karmapa.signIn" data-theme="dark"></div>
+    <a href="#" id="karmapa.signOut()">Sign out</a>
   </body>
 </html>
