--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com">
-    <script src="googleSignTest.js" async defer></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="googleSignTest.js" defer></script>
+    <script src="https://apis.google.com/js/platform.js" defer></script>
   </head>
   <body>
     <div class="g-signin2" data-onsuccess="karmapa.signIn" data-theme="dark"></div>
