--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = 'en'>
   <head>
-    <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com">
-    <script src="googleSignTest.js" defer async></script>
-    <script src="https://apis.google.com/js/platform.js" defer async></script>
+    <meta name = 'google-signin-scope' content = 'profile email'>
+    <meta name = 'google-signin-client_id' content = '104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com'>
+    <script src = 'googleSignTest.js' defer async></script>
+    <script src = 'https://apis.google.com/js/platform.js' defer async></script>
   </head>
   <body>
-    <div class="g-signin2" data-onsuccess="signIn" data-theme="dark"></div>
-    <a href="#" onclick="signOut();">Sign out</a>
+    <div class = 'g-signin2' data-onsuccess = 'signIn' data-theme = 'dark'></div>
+    <a href = '#' onclick = 'signOut();'>Sign out</a>
   </body>
 </html>s
