add signout eventlistener

--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class = 'g-signin2' id = 'signInDiv' data-onsuccess = 'signIn' data-theme = 'dark'></div>
-    <a href = '#' id = 'signOutLink' onclick = 'signOut();'>Sign out</a>
+    <a href = '#' id = 'signOutLink'>Sign out</a>
   </body>
 </html>s
