--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -7,7 +7,7 @@
     <script src = 'https://apis.google.com/js/platform.js' defer async></script>
   </head>
   <body>
-    <div class = 'g-signin2' id = 'signInDiv' data-onsuccess = 'signIn' data-theme = 'dark'></div>
+    <div class = 'g-signin2' id = 'signInDiv' data-theme = 'dark'></div>
     <a href = '#' id = 'signOutLink'>Sign out</a>
   </body>
 </html>s
