--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -1,13 +1,29 @@
-<!DOCTYPE html>
-<html lang = 'en'>
-  <head>
-    <meta name = 'google-signin-scope' content = 'profile email'>
-    <meta name = 'google-signin-client_id' content = '104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com'>
-    <script src = 'googleSignTest.js' defer async></script>
-    <script src = 'https://apis.google.com/js/platform.js' defer async></script>
-  </head>
-  <body>
-    <div id = 'signInDiv'></div>
-    <a href = '#' id = 'signOutLink'>Sign out</a>
-  </body>
+<html>
+<head>
+  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+</head>
+<body>
+  <div id="my-signin2"></div>
+  <script>
+    function onSuccess(googleUser) {
+      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+    }
+    function onFailure(error) {
+      console.log(error);
+    }
+    function renderButton() {
+      gapi.signin2.render('my-signin2', {
+        'scope': 'profile email',
+        'width': 240,
+        'height': 50,
+        'longtitle': true,
+        'theme': 'dark',
+        'onsuccess': onSuccess,
+        'onfailure': onFailure
+      });
+    }
+  </script>
+
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+</body>
 </html>
