--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com">
 </head>
 <body>
   <div id="my-signin2"></div>
