add signout tag

--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <div id="my-signin2"></div>
+  <a href = '#' id = 'signOutLink'>Sign out</a>
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
 </html>
