--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -3,8 +3,8 @@
   <head>
     <meta name = 'google-signin-scope' content = 'profile email'>
     <meta name = 'google-signin-client_id' content = '104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com'>
-    <script src = 'googleSignTest.js' defer async></script>
-    <script src = 'https://apis.google.com/js/platform.js' defer async></script>
+    <script src = 'googleSignTest.js'></script>
+    <script src = 'https://apis.google.com/js/platform.js'></script>
   </head>
   <body>
     <div class = 'g-signin2' id = 'signInDiv' data-onsuccess = 'signIn' data-theme = 'dark'></div>
