--- a/googleSignInTest/googleSignInTest.html
+++ b/googleSignInTest/googleSignInTest.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang = 'en'>
+<html lang="en">
   <head>
-    <meta name = 'google-signin-scope' content = 'profile email'>
-    <meta name = 'google-signin-client_id' content = '104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com'>
-    <script src = 'https://apis.google.com/js/platform.js'></script>
-    <script src = 'googleSignTest.js' defer></script>
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="104590346114-ebjt9ui7cq3imbnfv3ejb88n3k4v7teg.apps.googleusercontent.com">
+    <meta charset="utf-8">
+    <script src="//apis.google.com/js/platform.js"></script>
+    <script src="googleSignTest.js" defer></script>
   </head>
   <body>
-    <div class = 'g-signin2' id = 'signInDiv' data-onsuccess = 'signIn' data-theme = 'dark'></div>
-    <a href = '#' id = 'signOutLink'>Sign out</a>
+    <div class="g-signin2" id="signInDiv" data-onsuccess="signIn" data-theme="dark"></div>
+    <a href="#" id="signOutLink">Sign out</a>
   </body>
 </html>
